# wagtail-typst

./: README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/wagtail_typst/: __init__.py  _typst_worker.py  apps.py  blocks.py  compiler.py  fields.py  settings.py  widgets.py
src/wagtail_typst/static/wagtail_typst/css/: typst-content.css  typst.css
src/wagtail_typst/static/wagtail_typst/fonts/: LICENSE-DejaVu.txt  OFL.txt
src/wagtail_typst/templates/wagtail_typst/blocks/: typst_block.html
src/wagtail_typst/templates/wagtail_typst/widgets/: typst_textarea.html
src/wagtail_typst/templatetags/: wagtail_typst_tags.py
tests/: settings.py  test_compiler.py  test_integration.py  test_security.py
